DLCpar Change Log
-----------------------

dlcpar-1.0.2 (2017/10/17)
-----------------------
- remove restriction on max dups from LCA mapping

dlcpar-1.0.1 (2016/10/20)
-----------------------
- add convergence-based stop criterion to dlcpar_search

dlcpar-1.0 (2016/09/28)
-----------------------
- count number of optimal reconciliations
- uniformly sample from optimal reconciliations

dlcpar-0.9.1 (2013/12/11)
-----------------------
- fix installation

dlcpar-0.9 (2013/05/17)
-----------------------
- initial release
