@@ -27,7 +27,7 @@ except ImportError:
 
 PROGRAM_NAME = u"DLCPar"
 PROGRAM_VERSION_MAJOR = 1
-PROGRAM_VERSION_MINOR = 2
+PROGRAM_VERSION_MINOR = 1
 PROGRAM_VERSION_RELEASE = 0
 PROGRAM_VERSION = (PROGRAM_VERSION_MAJOR,
                    PROGRAM_VERSION_MINOR,
