@@ -1,6 +1,10 @@
 DLCpar Change Log
 -----------------------
 
+dlcpar-1.1.0 (2019/06/21)
+-----------------------
+- add dlcscape
+
 dlcpar-1.0.2 (2017/10/17)
 -----------------------
 - remove restriction on max dups from LCA mapping
